syntax = "proto3";

option csharp_namespace = "ArtistsService";
import "google/protobuf/timestamp.proto";

service GrpcArtists {
    rpc GetArtist(GetArtistRequest) returns (ArtistGrpc) {}
}

message GetArtistRequest {
    string id = 1;
}

message ArtistGrpc {
    string id = 1;

    string name = 2;
    
    string gender = 3;

    google.protobuf.Timestamp createdAt = 4;
}
